--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "postcss-nested": "^6.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
